# BLE_Mesh

./: README.md
NRF_MESH/: readme.txt
NRF_MESH/nRF5_SDK_for_Mesh/: CMakeLists.txt  README.md  RELEASE_NOTES.md
NRF_MESH/nRF5_SDK_for_Mesh/CMake/: Coverage.cmake  ExtractSoftDevice.cmake  FindSDK.cmake  GenerateSESProject.cmake  UnitTest.cmake  mesh.lnt  pc_lint.cmake  toolchain_armcc.cmake
NRF_MESH/nRF5_SDK_for_Mesh/CMake/SES/: SESGenerator.py  ses.xml
NRF_MESH/nRF5_SDK_for_Mesh/CMake/softdevice/: s110_8.0.0.cmake  s130_2.0.1.cmake
NRF_MESH/nRF5_SDK_for_Mesh/CMake/toolchain/: armcc.cmake  clang.cmake  gccarmemb.cmake
NRF_MESH/nRF5_SDK_for_Mesh/doc/: CMakeLists.txt
NRF_MESH/nRF5_SDK_for_Mesh/doc/doxygen/: Doxyfile.in  custom_groups.dox
NRF_MESH/nRF5_SDK_for_Mesh/doc/getting_started/: basic_architecture.md  basic_concepts.md  dfu_quick_start.md  getting_started.md  how_to_build.md  how_to_build_your_network.md  how_to_models.md  how_to_nordicSDK.md  mesh_hw_resources.md  provisioning.md
NRF_MESH/nRF5_SDK_for_Mesh/doc/getting_started/src/: basic_architecture.graphml  mesh_and_ble.graphml
NRF_MESH/nRF5_SDK_for_Mesh/doc/libraries/: flash_manager.md  serial.md  serial_cmd.md  serial_evt.md  serial_status.md
NRF_MESH/nRF5_SDK_for_Mesh/examples/: CMakeLists.txt  README.md  examples.emProject  nrf_mesh_sdk.c  nrf_mesh_sdk.h  nrf_mesh_weak.c
NRF_MESH/nRF5_SDK_for_Mesh/examples/beaconing/: README.md  beaconing_nrf51422_xxAC_s130_2_0_1.emProject  beaconing_nrf52832_xxAA_s132_3_1_0.emProject  beaconing_nrf52832_xxAA_s132_5_0_0.emProject  beaconing_nrf52840_xxAA_s140_5_0_0-3_alpha.emProject
NRF_MESH/nRF5_SDK_for_Mesh/examples/dfu/: README.md  dfu_nrf51422_xxAC_s130_2_0_1.emProject  dfu_nrf52832_xxAA_s132_3_1_0.emProject  dfu_nrf52832_xxAA_s132_5_0_0.emProject  dfu_nrf52840_xxAA_s140_5_0_0-3_alpha.emProject
NRF_MESH/nRF5_SDK_for_Mesh/examples/light_control/: README.md
NRF_MESH/nRF5_SDK_for_Mesh/examples/light_switch/: README.md
NRF_MESH/nRF5_SDK_for_Mesh/examples/models/: README.md
NRF_MESH/nRF5_SDK_for_Mesh/examples/pb_remote_client/: README.md
NRF_MESH/nRF5_SDK_for_Mesh/examples/serial/: CMakeLists.txt  serial_nrf51422_xxAC_s130_2_0_1.emProject  serial_nrf52832_xxAA_s132_3_1_0.emProject  serial_nrf52832_xxAA_s132_5_0_0.emProject  serial_nrf52840_xxAA_s140_5_0_0-3_alpha.emProject
NRF_MESH/nRF5_SDK_for_Mesh/mesh/: CMakeLists.txt  mbtle_src_definition.cmake
NRF_MESH/nRF5_SDK_for_Mesh/mesh/access/: CMakeLists.txt
NRF_MESH/nRF5_SDK_for_Mesh/mesh/test/mttest/: CMakeLists.txt  mttest.c
(+371 files in other folders)
